k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masterino
  labels:
    app.kubernetes.io/part-of: masterino
    masterino.io/environment: production
  annotations:
    masterino.io/ack-cluster-id: c5c81a41c33164f578f4e43a77fda5fc3
    masterino.io/ack-region: cn-shenzhen
