k8s/overlays/production/webapi-trace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterino-webapi-trace-ingress
  labels:
    app.kubernetes.io/name: masterino
    app.kubernetes.io/part-of: masterino
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: '60'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '1'
    nginx.ingress.kubernetes.io/proxy-body-size: '32k'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_hide_header X-Middleware-Rewrite;
      proxy_hide_header X-Middleware-Set-Cookie;
      proxy_hide_header X-Nextjs-Cache;
      proxy_hide_header X-Nextjs-Matched-Path;
      proxy_hide_header X-Nextjs-Prerender;
      proxy_hide_header X-Nextjs-Rewritten-Path;
      proxy_hide_header X-Nextjs-Rewritten-Query;
      proxy_hide_header X-Nextjs-Stale-Time;
      proxy_hide_header X-Invoke-Path;
      proxy_hide_header X-Invoke-Query;
      proxy_hide_header X-Invoke-Output;
      proxy_hide_header X-Powered-By;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - masterion.bielcrystal.com
      secretName: 20261122bielcrystal.com
  rules:
    - host: masterion.bielcrystal.com
      http:
        paths:
          - path: /webapi/trace
            pathType: Exact
            backend:
              service:
                name: masterino
                port:
                  number: 3210
